# CompGeom

./: .gitignore  AGENTS.md  GeometricTestings.md  INSTALL.md  README.md  TestGuide.md  art_gallery_problem.py  closest_pair.py  convex_partition.py  convex_polygon_distance.py  debug_convexity.py  delaunay_flip.py  dynamic_delaunay.py  euler_characteristic.py  fix_imports.py  generate_circle_points.py  generate_concave_shapes.py  generate_convex_shapes.py  generate_rectangle_points.py  generate_triangle_points.py  geometric_predictes.py  graham_scan.py  grid_walks.py  hilbert_walk2d.py  line_arrangement.py  medial_axis_polygon.py  mesh_neighbors.py  minimum_bounding_shapes.py  minkowski_sum.py  morton_walk2d.py  peano_walk2d.py  point_in_polygon.py  point_kdtree2d.py  point_quadtree2d.py  polygon_boolean_operations.py  polygon_properties.py  pyproject.toml  random_walker2d.py  random_walker3d.py  rotating_calipers.py  (+8 more)
src/: geometry_utils.py  planar_subdivision.py  polygon_utils.py  proximity_utils.py  pyproject.toml  spatial_index.py  triangulation.py  voronoi.off
src/cli/: art_gallery_problem.py  convex_polygon_distance.py  delaunay_flip.py  euler_characteristic.py  generate_circle_points.py  generate_rectangle_points.py  hilbert_walk2d.py  line_arrangement.py  medial_axis_polygon.py  peano_walk2d.py  point_kdtree2d.py  polygon_boolean_operations.py  polygon_visibility.py  random_walker2d.py  random_walker3d.py  reflection_polygon.py  spiral_walk2d.py  zigzag_walk2d.py
src/compgeom/: Algorithms.md  README_FINAL.md  __init__.py  bounding.py  circle_packing.py  distance_map.py  exceptions.py  logging.py  math_utils.py  medial_axis.py  mesh.py  mesh_coloring.py  mesh_io.py  mesh_refinement.py  points_sampling.py  polygon.py  polygon_smoothing.py  proximity.py  rectangle_packing.py  sequences.py  shapes.py  space_filling_curves.py  spatial.py  visualization.py  voxelization.py  walks.py
src/compgeom/algebraic/: __init__.py  brep.py  elimination.py  grobner.py  polynomial.py
src/compgeom/algo/: __init__.py  bounding.py  contiguous_art_gallery.py  frechet_tester.py  hopper_optimizer.py  lower_envelop.py  path.py  point_trees.py  points_sampling.py  proximity.py  random_walker.py  shapes.py  space_filling_curves.py  union_volume_estimation.py
src/compgeom/bench/: delaunay_triangulation_bench.py  kdtree_bench.py  quadtree_bench.py  space_filling_curves_bench.py  voronoi_diagram_bench.py
src/compgeom/cli/: README.md  __init__.py  _shared.py  a.off  art_gallery_problem.py  art_gallery_problem_cli.py  circle_packing.py  circle_packing_cli.py  closest_pair_cli.py  concave_polygon.off  constrained_tri_mesh_cli.py  convex_decomposition.py  convex_decomposition_cli.py  convex_hull.off  convex_partition.py  convex_partition_cli.py  convex_polygon.off  convex_polygon_distance.py  convex_polygon_distance_cli.py  davenport_schinzel.py  davenport_schinzel_cli.py  delaunay_flip.py  delaunay_flip_cli.py  distance_map.py  distance_map_cli.py  dynamic_delaunay.py  dynamic_delaunay_cli.py  euler_characteristic.py  euler_characteristic_cli.py  generate_circle_points_cli.py  generate_concave_polygon_cli.py  generate_concave_shapes.py  generate_concave_shapes_cli.py  generate_convex_shapes_cli.py  generate_primitive_polygon_cli.py  generate_rectangle_points.py  generate_rectangle_points_cli.py  generate_triangle_points_cli.py  geometric_predictes_cli.py  (+73 more)
src/trianglemesh/: __init__.py  geometry.py  mesh.py  planar.py  polygon.py  sampling.py  triangulation.py  walks.py
(+1113 files in other folders)
