[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compgeom"
version = "0.1.0"
description = "Computational geometry utilities, mesh tools, and CLI scripts."
requires-python = ">=3.12"
dependencies = [
    # Add any dependencies if needed
]

[project.scripts]
compgeom = "compgeom.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
