[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compgeom"
version = "0.1.0"
description = "Computational geometry utilities, mesh tools, and CLI scripts."
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "pytest-cov",
    # Core scientific computing
    "numpy",
    "scipy",
]

[project.optional-dependencies]
viz = [
    "matplotlib",
    "pyvista",
]
geometry = [
    "shapely",
]
neural = [
    "torch",
    "jax",
    "jaxlib",
]
all = [
    "compgeom[viz,geometry,neural]",
]

[project.scripts]
compgeom = "compgeom.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
