[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compgeom"
version = "0.1.0"
description = "Computational geometry utilities, mesh tools, and CLI scripts."
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "pytest-cov",
    # Core scientific computing
    "numpy",
    "scipy",
    "opencv-python",
    "torch",
    "pyvista",
    "meshio",
]

[project.optional-dependencies]
viz = [
    "matplotlib",
]
geometry = [
    "shapely",
]
neural = [
    "jax",
    "jaxlib",
]
all = [
    "compgeom[viz,geometry,neural]",
]

[project.scripts]
compgeom = "compgeom.cli.main:main"
hopper = "compgeom.cli.hopper_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501", "F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
filterwarnings = ["error", "default"]
timeout = 30
